backend_rag/diag_output_final.txt

--- Testing C++ Executor ---
Standard Problem - Passed: False, Output: , Error: temp_6d218ee7283e4059913c137069aab73e.cpp: In function 'int main()':
temp_6d218ee7283e4059913c137069aab73e.cpp:97:65: error: no matching function for call to 'lref(<brace-enclosed initializer list>)'
 int main() { Solution sol; print_res(sol.twoSum(lref({2,7,11,15}), 9)); return 0; }
                                                                 ^
temp_6d218ee7283e4059913c137069aab73e.cpp:40:25: note: candidate: template<class T> T& lref(T&&)
 template<typename T> T& lref(T&& val) { return val; }
                         ^~~~
temp_6d218ee7283e4059913c137069aab73e.cpp:40:25: note:   template argument deduction/substitution failed:
temp_6d218ee7283e4059913c137069aab73e.cpp:97:65: note:   couldn't deduce template parameter 'T'
 int main() { Solution sol; print_res(sol.twoSum(lref({2,7,11,15}), 9)); return 0; }
                                                                 ^

Design Problem - Passed: True, Output: [null,null,null,2,2,false], Error: 

--- Testing Java Executor ---
Standard Problem - Passed: True, Output: [0,1], Error: 
